--- a/resources/css/mainStyles.css
+++ b/resources/css/mainStyles.css
@@ -14,7 +14,7 @@
 }
 
 .navText {
-    color: #e6e6e6 !important;
+    color: #cccccc !important;
     font-size: 15pt;
 }
 
@@ -34,21 +34,43 @@
     max-width: 500px;
     font-weight: 900;
     font-family: 'CircularStd', sans-serif !important;
+    line-height: 1.5;
+}
+
+.summitStats {
+        color: #bfbfbf !important;
+        font-weight: 700;
+}
+
+.summitStats:hover {
+    color: #ff6524 !important;
+}
+
+.summitStatsNav:hover {
+    color: #ff6524 !important;
 }
 
 .aboutMe-content {
     padding-top: 10px;
     font-weight: 300;
     max-width: 700px;
+    line-height: 1.5;
 }
 
 .aboutMe-email {
     margin-top: 20px;
     margin-bottom: 10px;
-    font-weight: 100;
-    color: rgb(223, 223, 223);
     border-bottom: 1px solid white;
     width: fit-content;
+}
+
+a:hover {
+    color: white !important
+}
+
+.aboutMe-email-text {
+    color: #cccccc !important;
+    font-weight: 500;
 }
 
 .profilePic {
@@ -79,15 +101,8 @@
     color: red;
 }
 
-.pic{
-    width: 300px;
-    height: 330px;
-    border-radius: 20px;
-    padding-bottom: 5px;
-}
-
-.picWider{
-    width: 290px;
+.activityImage{
+    width: 270px;
     height: 330px;
     border-radius: 20px;
     padding-bottom: 5px;
@@ -120,6 +135,7 @@ title{
 
 .smallBotSpace{
     margin-bottom: 5px;
+    font-weight: 500;
 }
 .TBspace{
     margin: 15px 0 15px 0;
