--- a/resources/css/mainStyles.css
+++ b/resources/css/mainStyles.css
@@ -27,6 +27,8 @@
 .header {
     background-color: #1a2e26;
     color: #ffffff;
+    display: flex;
+    align-items: center;
 }
 
 .header-title {
@@ -95,7 +97,7 @@ a:hover {
 
 .profilePic-container {
     text-align: center;
-    padding: 50px;
+    padding: 5%;
 }
 
 @media only screen and (max-width: 767px) {
@@ -111,7 +113,7 @@ a:hover {
 
 .live-text {
     font-size: 12pt;
-    color: red;
+    color: rgb(207, 0, 0);
 }
 
 .activityImage{
@@ -141,20 +143,23 @@ title{
     font-size: 15px;
 }
 
-.enjoy{
+.enjoyText{
     padding-top: 10px;
     font-size: 30px;
+    margin-bottom: 30px;
 }
 
 .smallBotSpace{
     margin-bottom: 5px;
     font-weight: 500;
+    font-size: 14pt;
 }
 .TBspace{
     margin: 15px 0 15px 0;
 }
 .bottom_space{
     margin-bottom: 30px;
+    font-size: 13pt;
 }
 
 .fam{
